# goit-pythonweb-hw-06

./: README.md  alembic.ini  connect.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: b33beae02aac_description_of_changes.py
